2008-02-23  Andrew Pinski  <andrew_pinski@playstation.sony.com>

PR pch/35027
        * c-pch.c (c_common_valid_pch): Make the "too short to be a PCH
        file" warning condtional on -Winvalid-PCH.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@132574 138bc75d-0d04-0410-961f-82ee72b054a4